--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class="container my-5">
         <h1 class="text-center mb-4">Conversor de Unidades</h1>
 
-        <!-- Kilómetros a Metros -->
+        <!-- Convertir Kilómetros a Metros -->
         <div class="row mb-3 p-3 bg-light rounded">
             <h4>Conversión de Kilómetros a Metros</h4>
             <div class="col-md-6">
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <!-- Metros a Centímetros -->
+        <!-- Convertir Metros a Centímetros -->
         <div class="row mb-3 p-3 bg-light rounded">
             <h4>Conversión de Metros a Centímetros</h4>
             <div class="col-md-6">
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <!-- Pies a Pulgadas -->
+        <!-- Convertir Pies a Pulgadas -->
         <div class="row mb-3 p-3 bg-light rounded">
             <h4>Conversión de Pies a Pulgadas</h4>
             <div class="col-md-6">
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <!-- Yardas a Pulgadas -->
+        <!--Convertir Yardas a Pulgadas -->
         <div class="row mb-3 p-3 bg-light rounded">
             <h4>Conversión de Yardas a Pulgadas</h4>
             <div class="col-md-6">
